--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article><!-- .intro -->
         <section class="test-area">
             <div id="origin-text">
-                <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
+                <p>Founded in 2010 by an inspired team of enthusiast and proficient entrepreneurs with an aim to take the organization to new horizons using their expertise, technology adoption and preserving highest standards, today, Metatagg Solutions successfully serves its customers all over the world.</p>
             </div><!-- #origin-text -->
 
             <div class="test-wrapper">
